# imod-python

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  .sonarcloud.properties  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  developing.html  environment-dev.yml  environment.yml  genindex.html  imod-environment-dev.yml  imod-environment.yml  imod-python.spdx.json  index.html  installation.html  my_program.py  objects.inv  pixi.toml  program.prof  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  test_ndimage.py  tox.ini
.dvc/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: synch-to-gitlab.yml
.sonarlint/: connectedMode.json
.teamcity/: pom.xml  settings.kts
.teamcity/Deploy/: DeployProject.kt
.teamcity/Docker/: DockerDevProject.kt  DockerProject.kt
.teamcity/Dockerfile/: Dockerfile
.teamcity/Nightly/: NightlyProject.kt
.teamcity/Pixi/: PixiProject.kt
.teamcity/Templates/: AcceptanceTestsTemplate.kt  ExamplesTemplate.kt  GitHubIntegrationTemplate.kt  LintTemplate.kt  MyPyTemplate.kt  PipPythonTemplate.kt  PipPythonTemplates.kt  UnitTestsTemplate.kt
.teamcity/Weekly/: WeeklyProject.kt
.teamcity/_Self/: MainProject.kt
_downloads/03c305a11d0d4655d8532702d99999b7/: rasterize_shp.ipynb
_downloads/0c664f948b24c042ef878353e08d519b/: transport_2d.ipynb
_downloads/14fac37607dbce8b7123093332bdf7f7/: polygonize_raster.ipynb
_downloads/1e337ba494f36953d64292ebd502fc8b/: VerticalInterface.ipynb
_downloads/1eb37773ec2d77ee632f20a25f7f54ac/: reproject.py
_downloads/1ed155afff07fefffdf044425bc51c46/: read_metaswap_file.ipynb
_downloads/23979bd93c2fb13cd08ff0e081349e09/: hondsrug_regridding.py
_downloads/298256835a80471bb31d7b401edf265e/: 10-cleanup.ipynb
_downloads/2a3cb6737968011b4c9c70b7491f1ea0/: ImodflowProjectfile.ipynb
_downloads/2a9f5616bdf35c8e78b3214ec7e10034/: Henry.ipynb
_downloads/2da08518e6a9d571f7aee5c95a773928/: 03-timeseries-data.ipynb
_downloads/3237266d07d49554084cbc4cf11bcf15/: ex01_twri.py
_downloads/34eafadca791794148fd7c094e311389/: 02-vector-data.py
_downloads/3954d7fc6b6b0b785ecc1c6248baf350/: VerticalInterface.py
_downloads/3e561bea3b8b74fe958e91a442daed49/: lake.ipynb
_downloads/3ee6cce4f0c094c9598e543993274a22/: plot_map.py
_downloads/48bac3f7d75816a3efc8a87caad0a01b/: hondsrug_partitioning.py
_downloads/4990753e2e175c4c8ddc4b97830ffbfc/: twri_regridding.ipynb
_downloads/5153289a2b35429bbbceb8b8ae4a7e08/: example_1d_transport.ipynb
_downloads/535dfa4c976a3f9f953e401baec3af5a/: FreshwaterLens.ipynb
_downloads/5797431fd917380b0623f26bce56341c/: Hydrocoin.py
_downloads/5e782502f0a9486ddd827fbe4eb94379/: 05-unstructured-grids.py
_downloads/6248d20ddba90e15ab7052d04b77b475/: circle_transport.py
_downloads/681b883c10207ac5224f2aa7813cff9b/: ex01_twri.ipynb
_downloads/6ca44f63cf025ff209dcc705a198c2d7/: metaswap_example.ipynb
_downloads/70c8fb46fd5ac67d2ba0690c15ea8709/: ImodflowProjectfile.py
_downloads/7ed24ba9602bc45582a84d1dfe7e1223/: Henry-wq.ipynb
_downloads/82ed6b92112cd7658aa53554d64e0e6b/: example_models.ipynb
_downloads/8899cb56cdb8405a5c6c8e4fbc8842bf/: Henry.ipynb
_downloads/8b70a52ee92883b774f0442a9097aab7/: plot_map.ipynb
_downloads/8fb8e710c739c7c59ffba5d6523d1a10/: 08-regridding.ipynb
_downloads/90e0bbff5fbb2ff1990dfd9a32f2489c/: point_interpolation.ipynb
_downloads/91eb500f47b71468fd3dc7f6e78c0b44/: reproject.ipynb
_downloads/93e451d4bad153c2db40fa1274935351/: Elder.ipynb
_downloads/9616d9ba8e4265a54ecb70e06f1c18da/: 09-topsystem.ipynb
_downloads/9965fe2b3f087f8c76ddd1d60b60c7d5/: circle_transport.ipynb
_modules/: index.html
_sources/: developing.rst.txt  index.rst.txt  installation.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js  theme-deltares.css
api/: changelog.html  evaluate.html  flow.html  index.html  io.html  logging.html  metamod.html  mf6.html  msw.html  prepare.html  select.html  util.html  visualize.html  wq.html
developing/: ci.html  contributing.html  docker.html  documentation.html  examples.html  index.html  releasing.html  test-plan.html
docs/: api.rst  changelog.rst  clean.py  conf.py  contributing.rst  coordinates.rst  data-structures.rst  developing.rst  examples.rst  imod.rst  index.rst  indexing.rst  installation.rst  installing.rst  internals.rst  model.rst  modules.rst  multidoc.py  post-processing.rst  regridding.rst  roadmap.rst  sg_execution_times.rst  version-switcher-patch.diff
examples/: Brabant_steady-state.py  Elder.py  FreshwaterLens.py  HenryCase.py  Hydrocoin.py  ImodflowProjectfile.py  LHM_to_modflow6.py  README.rst  SaltwaterPocket.py  SyntheticModel_Toth1963.ipynb  VerticalInterface.py  circle.py  iMODSEAWAT_HenryCase.ipynb  index.html  julians_playground.py  mf6_ex01_twri.py  mf6_ex01_twri_transient_chd.py  visualize-cross-section.py
faq/: API-design.html  general.html  imod5_backwards_compatibility.html  index.html  known-issues.html  modeling.html  python.html
imod/: __init__.py  _version.py  declxml.py  fixed_format.py  gen.py  idf.py  io.py  ipf.py  model.py  qgs.py  rasterio.py  regrid.py  run.py  schemata.py  tec.py  tecio.py  testing.py  util.py
tests/: additional_code_checks.py  conftest.py  test_array_IO.py  test_array_io.py  test_benchmark.py  test_code_checks.py  test_common.py  test_data.py  test_examples.py  test_gen.py  test_idf.py  test_interpolate.py  test_io.py  test_ipf.py  test_layerregrid.py  test_model.py  test_rasterio.py  test_regrid.py  test_reproject.py  test_run.py  test_spatial.py  test_util.py  test_voxelize.py
user-guide/: 00-index-examples.html  01-raster-data.html  02-vector-data.html  03-timeseries-data.html  05-unstructured-grids.html  06-lazy-evaluation.html  07-time-discretization.html  08-regridding.html  09-topsystem.html  10-cleanup.html  11-imod5-files.html  12-imod5-model-to-modflow6.html  index.html  sg_execution_times.html
(+1276 files in other folders)
