[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imod"
version = "0.15.1"
requires-python = ">=3.10"
authors = [{ name = "Deltares", email = "huite.bootsma@deltares.nl" }, ]
maintainers = [{ name = "Deltares", email = "huite.bootsma@deltares.nl" }]
description = "Make massive MODFLOW models!"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["imod", "modflow", "groundwater modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "affine",
    "cftime >=1",
    "dask",
    "fastcore",
    "Jinja2",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pooch",
    "scipy",
    "tomli_w",
    "toolz",
    "tqdm",
    "xarray >=0.15",
    "xugrid >=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Deltares/imod-python"
Documentation = "https://deltares.github.io/imod-python/"
Repository = "https://github.com/Deltares/imod-python.git"
"Bug Tracker" = "https://github.com/Deltares/imod-python/issues"
Changelog = "https://github.com/Deltares/imod-python/blob/master/docs/api/changelog.rst"

[project.optional-dependencies]
all = [
    "bottleneck",
    "contextily >=1",
    "cytoolz",
    "geopandas",
    "pyvista",
    "rasterio >=1",
    "rioxarray",
    "shapely >=1.8",
    "tomli >= 1.1.0 ; python_version < '3.11'",
    "zarr",
]
dev = [
    "imod[all]",
    "black",
    "ruff",
    "flopy",
    "hypothesis",
    "mypy",
    "pydata-sphinx-theme",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "sphinx",
    "sphinx-gallery",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff.lint]
select = ["C4", "E", "F", "I"]
ignore = [
    "C401",
    "C402",
    "C403",
    "C404",
    "C405",
    "C408",
    "C416",
    "C417",
    "C419",
    "D202",
    "D205",
    "D206",
    "D400",
    "D404",
    "E402",
    "E501",
    "E703",
    "E713",
    "E721",
    "E731",
    "E741",
    "F811",
    "PD002",
    "PD003",
    "PD004",
    "PD901",
]
fixable = ["I"]
ignore-init-module-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"./docs/conf.py" = ["F401"]
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]
"test_examples.py" = ["F401"]

[tool.mypy]
files = "imod/mf6/**.py"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "affine.*",
    "bottleneck.*",
    "cftime.*",
    "contextily.*",
    "dateutil.*",
    "flopy.*",
    "fastcore.*",
    "geopandas.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "numba.*",
    "osgeo.*",
    "pandas.*",
    "pooch.*",
    "pyproj.*",
    "rasterio.*",
    "scipy.*",
    "shapely.*",
    "tomllib.*",
    "tqdm.*",
    "vtk.*",
    "xugrid.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "example: marks test as example (deselect with '-m \"not example\"')",
]