[metadata]
name = imod
author = Deltares
author_email = huite.bootsma@deltares.nl
description = Make massive MODFLOW models
url=https://gitlab.com/deltares/imod/imod-python
project_urls =
    Code=https://gitlab.com/deltares/imod/imod-python
    Issues=https://gitlab.com/deltares/imod/imod-python/-/issues
long_description = file: README.rst
license = MIT
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Hydrology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    imod
    modflow
    groundwater modeling
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    affine
    dask
    cftime >=1
    cytoolz
    declxml
    Jinja2
    joblib
    matplotlib
    numba
    numpy
    pandas
    tqdm
    scipy
    toolz
    xarray >=0.11
    
[options.extras_require]
all = 
    geopandas
    vtk >=9.0
    pyvista
    rasterio >=1
    zarr
    bottleneck
    contextily >=1

dev =
    %(all)s
    black
    flake8
    flopy
    nbstripout
    pytest
    pytest-cov
    pytest-benchmark
    sphinx
    sphinx_rtd_theme
    
 
[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
