[metadata]
name = imod
version = 0.13.2
author = Deltares
author_email = huite.bootsma@deltares.nl
description = Make massive MODFLOW models
url=https://gitlab.com/deltares/imod/imod-python
project_urls =
    Code=https://gitlab.com/deltares/imod/imod-python
    Issues=https://gitlab.com/deltares/imod/imod-python/-/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Hydrology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    imod
    modflow
    groundwater modeling
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    affine
    cftime >=1
    dask
    fastcore
    Jinja2
    matplotlib
    numba
    numpy
    pandas
    pooch
    scipy
    tomli_w
    toolz
    tqdm
    xarray >=0.15
    xugrid >=0.3.0
    
[options.extras_require]
all = 
    bottleneck
    contextily >=1
    cytoolz
    geopandas
    pyvista
    rasterio >=1
    ribasim
    rioxarray
    shapely >=1.8
    tomli >= 1.1.0 ; python_version < "3.11"
    zarr
dev =
    %(all)s
    black
    flake8
    flopy
    hypothesis
    pydata-sphinx-theme
    pytest
    pytest-cov
    pytest-benchmark
    sphinx
    sphinx-gallery
    tox

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203,
    # module level import not at top of file
    E402,
    # line too long - let black worry about that
    E501,
    # line break before binary operator
    W503, 
per-file-ignores = 
    ./docs/conf.py:F401
    __init__.py:F401
    conftest.py:F401
    test_examples.py:F401